// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Sidebar default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-sidebar lck-sidebar--active"
  >
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_35_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_35_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            No chapter to display
          </span>
           
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_35_header"
        class="p-toggleable-content"
        id="pv_id_35_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
           
          <div />
           
          <div
            class="p-m-1"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="p-m-1"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with edition and props items 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-sidebar lck-sidebar--active"
  >
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_36_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_36_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            First item
          </span>
           
          <span
            class="action-set"
          >
            <span
              class="bi bi-pencil action-button"
            />
             
            <span
              class="bi bi-trash action-button"
            />
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_36_header"
        class="p-toggleable-content"
        id="pv_id_36_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <span
                class="bi bi-grip-vertical handle"
              />
               
              <span
                class="lck-sidebar-link-label"
              >
                First subitem
              </span>
               
              <span
                class="action-subset"
              >
                <span
                  class="bi bi-pencil action-button"
                />
                 
                <span
                  class="bi bi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <span
                class="bi bi-grip-vertical handle"
              />
               
              <span
                class="lck-sidebar-link-label"
              >
                Second subitem
              </span>
               
              <span
                class="action-subset"
              >
                <span
                  class="bi bi-pencil action-button"
                />
                 
                <span
                  class="bi bi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <button
              class="p-button-sm w-full p-button p-component"
              type="button"
            >
              <span
                class="pi pi-plus p-button-icon p-button-icon-right"
              />
               
              <span
                class="p-button-label"
              >
                Create a new element
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_37_content"
          class="p-accordion-header-link"
          id="pv_id_37_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            Second item
          </span>
           
          <span
            class="action-set"
          >
            <span
              class="bi bi-pencil action-button"
            />
             
            <span
              class="bi bi-trash action-button"
            />
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_37_header"
        class="p-toggleable-content"
        id="pv_id_37_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <span
                class="bi bi-grip-vertical handle"
              />
               
              <span
                class="lck-sidebar-link-label"
              >
                Third subitem
              </span>
               
              <span
                class="action-subset"
              >
                <span
                  class="bi bi-pencil action-button"
                />
                 
                <span
                  class="bi bi-trash action-button"
                />
              </span>
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <span
                class="bi bi-grip-vertical handle"
              />
               
              <span
                class="lck-sidebar-link-label"
              >
                Fourth subitem
              </span>
               
              <span
                class="action-subset"
              >
                <span
                  class="bi bi-pencil action-button"
                />
                 
                <span
                  class="bi bi-trash action-button"
                />
              </span>
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <button
              class="p-button-sm w-full p-button p-component"
              type="button"
            >
              <span
                class="pi pi-plus p-button-icon p-button-icon-right"
              />
               
              <span
                class="p-button-label"
              >
                Create a new element
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="p-m-1"
    >
      <button
        class="p-button-sm w-full p-button p-component"
        type="button"
      >
        <span
          class="pi pi-plus p-button-icon p-button-icon-right"
        />
         
        <span
          class="p-button-label"
        >
          Create a new element
        </span>
         
        <!---->
        <span
          class="p-ink"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-sidebar lck-sidebar--active"
  >
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_40_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_40_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            First item
          </span>
           
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_40_header"
        class="p-toggleable-content"
        id="pv_id_40_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                First subitem
              </span>
               
              <!---->
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Second subitem
              </span>
               
              <!---->
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_41_content"
          class="p-accordion-header-link"
          id="pv_id_41_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            Second item
          </span>
           
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_41_header"
        class="p-toggleable-content"
        id="pv_id_41_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Third subitem
              </span>
               
              <!---->
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Fourth subitem
              </span>
               
              <!---->
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="p-m-1"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Sidebar with props items and active 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-accordion p-component lck-sidebar lck-sidebar--active"
  >
    <div
      class="p-accordion-tab p-accordion-tab-active"
    >
      <div
        class="p-accordion-header p-highlight"
      >
        <a
          aria-controls="pv_id_38_content"
          aria-expanded="true"
          class="p-accordion-header-link"
          id="pv_id_38_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-down"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            First item
          </span>
           
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_38_header"
        class="p-toggleable-content"
        id="pv_id_38_content"
        role="region"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                First subitem
              </span>
               
              <!---->
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Second subitem
              </span>
               
              <!---->
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-accordion-tab"
    >
      <div
        class="p-accordion-header"
      >
        <a
          aria-controls="pv_id_39_content"
          class="p-accordion-header-link"
          id="pv_id_39_header"
          role="tab"
          tabindex="0"
        >
          <span
            class="p-accordion-toggle-icon pi pi-chevron-right"
          />
           
          <!---->
           
          <span
            class="lck-sidebar-link-label"
          >
            Second item
          </span>
           
          <!---->
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_39_header"
        class="p-toggleable-content"
        id="pv_id_39_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-accordion-content"
        >
           
          <div>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Third subitem
              </span>
               
              <!---->
            </a>
            <a
              class="mock-link lck-sidebar-link p-ml-4"
            >
              <!---->
               
              <span
                class="lck-sidebar-link-label"
              >
                Fourth subitem
              </span>
               
              <!---->
            </a>
          </div>
           
          <div
            class="p-m-1"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="p-m-1"
    >
      <!---->
    </div>
  </div>
</div>
`;
